--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org">
-<head lang="en">
+<html lang="EN">
+<head>
     <meta charset="UTF-8"/>
-    <title>ReactJS + Spring Data REST</title>
-    <link rel="stylesheet" href="/main.css" />
+    <title>Car rental company</title>
+    <link rel="stylesheet" href="../static/main.css" />
 </head>
 <body>
 
 <div id="react"></div>
 
-<script src="built/bundle.js"></script>
+<script src="../built/bundle.js"></script>
 
 </body>
 </html>
