Fixed loading from REST

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
 <html lang="EN">
 <head>
     <meta charset="UTF-8"/>
     <title>Car rental company</title>
-    <link rel="stylesheet" href="../static/main.css" />
+    <link rel="stylesheet" href="main.css" />
 </head>
 <body>
 
 <div id="react"></div>
-
-<script src="../built/bundle.js"></script>
+<script src="built/bundle.js"></script>
 
 </body>
 </html>
