New list of cars

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,12 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Car rental company</title>
-    <link rel="stylesheet" href="main.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <style>
+        h6 {
+            font-family: 'Lobster', cursive !important;
+        }
+    </style>
 </head>
 <body>
 
