Improved list & design

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,8 +4,12 @@
     <title>Car rental company</title>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <style>
-        h6 {
+        h4 {
             font-family: 'Lobster', cursive !important;
+            margin: 12px !important;
+        }
+        body {
+            margin: 0 !important;
         }
     </style>
 </head>
