--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8"/>
     <title>Car rental company</title>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <style>
         h4 {
             font-family: 'Lobster', cursive !important;
@@ -10,7 +11,12 @@
         }
         body {
             margin: 0 !important;
+            font-family: 'Lato', sans-serif;
         }
+        .MuiFormLabel-root.Mui-focused {
+            color: #FF775A !important;
+        }
+        li {list-style-type: none !important;}
     </style>
 </head>
 <body>
